verison 2.0