@@ -1,26 +1,65 @@
 package org.example;
 
+import org.example.pojo.MyJavaFiles;
+
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Optional;
 import java.util.stream.Stream;
 
 public class ListFiles {
-    public static List<Path> listFiles(Path path, String s) {
-        System.out.println("Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt. Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum. Aenean imperdiet. Etiam ultricies nisi vel augue. Curabitur ullamcorper ultricies nisi. Nam eget dui. Etiam rhoncus. Maecenas tempus, tellus eget condimentum rhoncus, sem quam semper libero, sit amet adipiscing sem neque sed ipsum. Nam quam nunc, blandit vel, luctus pulvinar, hendrerit id, lorem. Maecenas nec odio et ante tincidunt tempus. Donec vitae sapien ut libero venenatis faucibus. Nullam quis ante. Etiam sit amet orci eget eros faucibus tincidunt. Duis leo. Sed fringilla mauris sit amet nibh. Donec sodales sagittis magna. Sed consequat, leo eget bibendum sodales, augue velit cursus nunc,");
-        List<Path> result = new ArrayList<>();
-        try (Stream<Path> walk = Files.walk(path)) {
-            result = walk
+    public static List<MyJavaFiles> listFilesNew(Path path, String s) {
+        List<MyJavaFiles> filesList;
+        try (Stream<Path> filesStream = Files.walk(path)) {
+            filesList = filesStream
                     .filter(Files::isRegularFile)
                     .filter(path1 -> path1.getFileName().toString().endsWith(s))
-                    .collect(Collectors.toList());
-        } catch (IOException e){
+                    .map(path2 -> {
+                        try {
+                            return MyJavaFiles.builder()
+                                    .fileName(String.valueOf(path2.getFileName()))
+                                    .fileSize(Files.size(path2))
+                                    .path(path2)
+                                    .build();
+                        } catch (IOException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+
+        } catch (IOException e) {
             throw new RuntimeException(e);
         }
-        return result;
+        return filesList;
     }
+
+    public static Optional<Long> checkAllSize(Path path) {
+        List<MyJavaFiles> filesList;
+        try (Stream<Path> filesStream = Files.walk(path)) {
+            filesList = filesStream
+                    .map(path2 -> {
+                        try {
+                            return MyJavaFiles.builder()
+                                    .fileName(String.valueOf(path2.getFileName()))
+                                    .fileSize(Files.size(path2))
+                                    .build();
+                        } catch (IOException e) {
+                            throw new RuntimeException(e);
+                        }
+                    })
+                    .toList();
+
+        } catch (IOException e) {
+            throw new RuntimeException(e);
+        }
+
+        return filesList
+                .stream()
+                .map(MyJavaFiles::getFileSize)
+                .reduce(Long::sum);
+    }
+
 }
